syntax = "proto3";

import "google/protobuf/empty.proto";
import "notifications/notifications.proto";

package MoodyAPI;

option go_package = "api.mooody.me/models";

service MoodyAPIService
{
    // Notification Channels
    rpc CreateNotificationChannel(notifications.CreateChannelRequest) returns (notifications.CreateChannelResponse);
    rpc ListNotificationChannel(notifications.ListChannelRequest) returns (notifications.ListChannelResponse);
    rpc UpdateNotificationChannel(notifications.UpdateChannelRequest) returns (notifications.UpdateChannelResponse);
    rpc DeleteNotificationChannel(notifications.DeleteChannelRequest) returns (notifications.DeleteChannelResponse);

    // Notifications
    rpc SendNotification(notifications.SendRequest) returns (google.protobuf.Empty);
    rpc SubscribeNotifications(notifications.SubscribeRequest) returns (stream notifications.Notification);
}
